update missing backend features
